--- a/style.css
+++ b/style.css
@@ -1,76 +1,95 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: EB Garamond;
+    font-family: Garamond;
     list-style: none;
+    text-decoration: none;
 }
 
-body {
-    background: linear-gradient(245.59deg, #4d9559 0%, #38703d 28.53%, #133917 75.52%);
+html, body {
+    height: 100%;
 }
 
-section{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    align-content: center;
-}
-
-div {
-    height: auto;
+header {
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 1000;
     width: 100%;
-}
-
-header{
-    display:flex;
+    display: flex;
+    align-items: center;
     justify-content: space-between;
+    padding: 33px 9%;
+    background: transparent;
 }
-nav {
-    float:right;
-}
-
-img {
-    position:relative;
-    left: px;
-    height: auto;
-    max-width: 50%;
-    float: right;
-}
-
-h2 {}
 
 
 .logo {
- 
+    font-size: 30px;
+    font-weight: 700;
+    color: white;
+    border-bottom: 2px solid transparent;
+    transition: all .55s ease;
 }
-
 .logo:hover {
+    border-bottom: 2px solid white;
+    }
 
+
+.navlist {
+    display: flex;
+
+}
+
+.navlist a {
+    color: white;
+    margin-left: 60px;
+    font-size: 15px;
+    font-weight: 600;
+    border-bottom: 2px solid transparent;
+    transition: all .55s ease;
+}
+
+.navlist a:hover {
+    border-bottom: 2px solid white;
+}
+
+#menu-icon{
+    color: white;
+    font-size: 35px;
+    z-index: 10001;
     cursor: pointer;
-    text-decoration: underline;
+    display: none;
 }
 
-.logo:active{
-
+section {
+    padding: 0 19%;
 }
 
-.navlist {}
-
-.navlink {
-    margin: 10px;
-    border-left: solid 1px white;
-    padding-left: 15px;
-    justify-content: center;
+.main { 
+    height: 100%;
+    width: 100%;
+    min-width: 100%;
+    background: linear-gradient(245.59deg, #4d9559 0%, #38703d 28.53%, #133917 75.52%);
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 2rem;  
 }
 
-.navburger {
-    display: None;
+.text h5 {
+    font-size: 14px;
+    font-weight: 400;
+    color: white;
+    margin-bottom: 40px;
 }
 
-.button {
-    cursor: pointer;
-    background-color: #4d9559;
-    border-radius: 20%;
-    padding: 5px;
+.text h1{
+    font-family: Permanent Marker, cursive;
+    font-size: 90px;
+    line-height: 1;
+    color: white;
+    margin: 0 0 45px;
 }
