--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ header {
 }
 .logo:hover {
     border-bottom: 2px solid white;
-    }
+    transform: translateX(5px) translateY(-5px)
+}
 
 
 .navlist {
@@ -76,7 +77,8 @@ section {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
-    gap: 2rem;  
+    gap: 2rem; 
+     
 }
 
 .text h5 {
@@ -92,4 +94,17 @@ section {
     line-height: 1;
     color: white;
     margin: 0 0 45px;
+}
+
+.text a{
+    margin-top: 100px;
+    padding: 0 20px 0 20px;
+    background-color: #38703d;
+}
+
+
+
+img {
+    height: auto;
+    width: 600px;
 }
