--- a/teststyle.css
+++ b/teststyle.css
@@ -2,12 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Garamond;
+    font-family: 'poppins';
     list-style: none;
     text-decoration: none;
 }
 
-html, body {
+html,
+body {
     height: 100vh;
 }
 
@@ -15,6 +16,7 @@ header {
     position: fixed;
     right: 0;
     top: 0;
+    margin-right: 0;
     z-index: 1000;
     width: 100%;
     display: flex;
@@ -31,11 +33,14 @@ header {
     color: white;
     border-bottom: 2px solid transparent;
     transition: all .55s ease;
+
 }
+
 .logo:hover {
     border-bottom: 2px solid white;
     cursor: pointer;
-    }
+    transform: translateX(5px) translateY(-5px)
+}
 
 
 .navlist {
@@ -56,7 +61,7 @@ header {
     border-bottom: 2px solid white;
 }
 
-#menu-icon{
+#menu-icon {
     color: white;
     font-size: 35px;
     z-index: 10001;
@@ -68,7 +73,7 @@ section {
     padding: 0 19%;
 }
 
-.main { 
+.main {
     height: 100%;
     width: 100%;
     min-width: 100vh;
@@ -77,7 +82,7 @@ section {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
-    gap: 2rem;  
+    gap: 2rem;
 }
 
 .text h5 {
@@ -87,7 +92,7 @@ section {
     margin-bottom: 40px;
 }
 
-.text h1{
+.text h1 {
     font-family: Permanent Marker, cursive;
     font-size: 90px;
     line-height: 1;
@@ -95,3 +100,163 @@ section {
     margin: 0 0 45px;
 }
 
+.text h4 {
+    font-size: 18px;
+    font-weight: 600;
+    color: white;
+    margin-bottom: 10px;
+}
+
+.text p {
+    color: white;
+    font-size: 15px;
+    line-height: 1.9;
+    margin-bottom: 40px;
+}
+
+.goblin img {
+    width: 700px;
+    height: auto;
+}
+
+.text a {
+ 
+    display: inline-block;
+    color: white;
+    background: #4d9559;
+    border: 1px solid transparent;
+    padding: 12px 30px;
+    line-height: 1.4;
+    font-size: 14px;
+    font-weight: 500;
+    border-radius: 30px;
+    text-transform: uppercase;
+    transition: all .55s ease;
+}
+
+.text a:hover {
+    transform: translateX(8px) translateY(-8px);
+    background: transparent;
+    border: #ffffff 1px solid;
+}
+
+.text a.button {
+    background: transparent;
+    border: 1px solid white;
+    margin-left: 20px;
+}
+
+.text a.button i {
+    vertical-align: middle;
+    margin-right: 5px;
+}
+
+.icon {
+    position: absolute;
+    top: 50%;
+    padding: 0 9%;
+    transform: translateY(-50%);
+}
+
+.icon i {
+    display: block;
+    margin: 26px 0;
+    font-size: 24px;
+    color: white;
+    transition: all .50s ease;
+}
+
+.icon i:hover {
+    color: #4d9559;
+    transform: translateY(-5px);
+}
+
+.scroll {
+    position: absolute;
+    bottom: 6%;
+    right: 9%;
+}
+
+.scroll i {
+    display: block;
+    padding: 12px;
+    font-size: 25px;
+    color: white;
+    background: #4d9559;
+    border-radius: 30px;
+    transition: all .50s ease;
+}
+
+.scroll i:hover {
+    background: transparent;
+    border: white 1px solid;
+    transform: translateX(5px) translateY(-5px);
+}
+
+
+@media (max-widht:1535px) {
+    header {
+        padding: 15px 3%;
+        transition: .2s;
+    }
+
+    .icon {
+        padding 0.3%;
+        transition: .2s;
+    }
+
+    .scroll {
+        right: 3%;
+        transition: .2s;
+    }
+}
+
+@media (max-widht:1460px) {
+    section {
+        padding: 0 12%;
+        transition: .2s;
+    }
+}
+
+@media (max-widht:1340px) {
+    .goblin img {
+        width: 100%;
+        height: auto;
+    }
+
+    .text h1 {
+        font-size: 75px;
+        margin: 0 0 30px;
+    }
+
+    .text h5 {
+        margin-bottom: 25px;
+    }
+}
+
+@media (max-widht:1195px) {
+    section {
+        padding: 0 3%;
+        transition: 3%;
+    }
+
+    .text {
+        display: flex;
+        padding-top: 115px;
+        flex-direction: column;
+    }
+
+    .goblin {
+        text-align: center;
+    }
+
+    .goblin img {
+        width: 560px;
+        height: auto;
+    }
+
+    .main .text {
+        gap: 1rem;
+        flex-direction: column;
+    }
+}
