--- a/teststyle.css
+++ b/teststyle.css
@@ -7,9 +7,7 @@
     text-decoration: none;
 }
 
-html, body {
-    height: 110%;
-}
+
 
 header {
     position: fixed;
@@ -30,9 +28,7 @@ header {
     font-size: 30px;
     font-weight: 700;
     color: white;
-    border-bottom: 2px solid transparent;
-    transition: all .55s ease;
-
+    transition: all .50s ease
 }
 
 .logo:hover {
@@ -69,12 +65,13 @@ header {
 }
 
 section {
-    padding: 0 19%;
+    padding: 0 12%;
 }
 
 .main {
     height: 100%;
     width: 100%;
+    min-height: 100vh;
     background: linear-gradient(245.59deg, #4d9559 0%, #38703d 28.53%, #133917 75.52%);
     position: relative;
     display: grid;
@@ -138,13 +135,13 @@ section {
     border: #ffffff 1px solid;
 }
 
-.text a .button {
+.text a.ctaa {
     background: transparent;
     border: 1px solid white;
     margin-left: 20px;
 }
 
-.text a .button i {
+.text a.ctaa i {
     vertical-align: middle;
     margin-right: 5px;
 }
@@ -152,7 +149,7 @@ section {
 .icon {
     position: absolute;
     top: 50%;
-    padding: 0 9%;
+    padding: 0 3%;
     transform: translateY(-50%);
 }
 
@@ -193,6 +190,7 @@ section {
 
 
 @media (max-width: 1535px) {
+
     header {
         padding: 15px 3%;
         transition: .2s;
@@ -211,13 +209,13 @@ section {
 
 @media (max-width: 1460px) {
     section {
-        padding: 0 12%;
+        padding: 0 10%;
         transition: .2s;
     }
 }
 
 @media (max-width: 1340px) {
-    .goblin img {
+    .goblin img{
         width: 100%;
         height: auto;
     }
@@ -232,19 +230,14 @@ section {
     }
 }
 
-
-@media (max-width: 844px) {
-
+@media (max-width: 1195px) {
     section {
-        margin: 10px;
-        padding: 0 3%;
-        transition: 3%;
+        padding: auto 3%;
+        transition: .2s;
     }
 
     .text {
-        display: flex;
         padding-top: 115px;
-        flex-direction: column;
     }
 
     .goblin {
@@ -252,39 +245,63 @@ section {
     }
 
     .goblin img {
-        transition: .2s;
-        width: 400x;
+        width: 560px;
         height: auto;
-        
-    }
-
-    .main .text {
-        gap: 1rem;
-        flex-direction: column;
     }
 
     .main {
-
-        margin: 0 auto;
-        justify-content: flex-start;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        
+        height: 100%;
+        gap: 1rem;
+        grid-template-columns: 1fr;
     }
 
     .icon {
-        display: None;
+        display: none;
     }
 
-    .navlist, .logo {
-        display: None;
+    .scroll {
+        display: none;
+    }
+}
+
+@media (max-width: 990px) {
+    #menu-icon {
+        display: block;
     }
 
-    #menu-icon{
+    .navlist {
         position: absolute;
-        right: 10px;
-        top: 10px;
+        top: 100%;
+        right: 0;
+        width: 200px;
+        height: 40vh;
+        background: #4d955990;
+        border: 1px solid white;
+        border-radius: 20px;
+        display: None;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 50px 20px;
+        transition: all .55s ease;
+    }
+
+
+    .navlist a {
+        display: block;
+        margin: 7px 0;
+        margin-left: 0;
+    }
+
+    .navlist.open {
+        right: 0;
         display: flex;
+    }
+}
+
+@media (max-width: 680px) {
+    .goblin img {
+        height: auto;
+        width: 100%;
     }
 }
